--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Tic-Tac-Toe Minimax</title>
         <script src="js/main.js"></script>
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body onload="NewGame();">
-      
+      <div id="content">
         <h1 style="text-align:center; width:280;">Tic-Tac-Toe</h1>
+        <div class="first" style="width: 500px; margin: 0 auto; background: #000; color: #fff;">
         <img src="images/blank.png" width="75" height="71" onclick="MakeMove(0)" style="position:absolute; left:10; top:50; z-index:1" />
         <img src="images/blank.png" width="75" height="71" onclick="MakeMove(1)" style="position:absolute; left:110; top:50; z-index:1" />
         <img src="images/blank.png" width="75" height="71" onclick="MakeMove(2)" style="position:absolute; left:210; top:50; z-index:1" />
@@ -17,7 +19,7 @@
         <img src="images/blank.png" width="75" height="71" onclick="MakeMove(7)" style="position:absolute; left:110; top:250; z-index:1" />
         <img src="images/blank.png" width="75" height="71" onclick="MakeMove(8)" style="position:absolute; left:210; top:250; z-index:1" />
         <img src="images/board.png" id="gameBoard" width="270" height="270"style="position:absolute; left:10; top:50; z-index:0" />
-
+      </div>
 
 
         <h4 id="turnInfo" style="text-align:center; width:280; position:absolute; left:5; top:350; z-index:1" > TURN INFO </h4>
@@ -30,5 +32,7 @@
             <strong>Search time for move:</strong> <br />
             <div id="searchTime"></div>
        </div>
+
+  </div>
     </body>
 </html>
