--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="images/blank.png" width="75" height="71" onclick="MakeMove(7)" style="position:absolute; left:110; top:250; z-index:1" />
         <img src="images/blank.png" width="75" height="71" onclick="MakeMove(8)" style="position:absolute; left:210; top:250; z-index:1" />
         <img src="images/board.png" id="gameBoard" width="270" height="270"style="position:absolute; left:10; top:50; z-index:0" />
-      
+
 
 
         <h4 id="turnInfo" style="text-align:center; width:280; position:absolute; left:5; top:350; z-index:1" > TURN INFO </h4>
@@ -37,4 +37,5 @@
 
   </div>
     </body>
+    <!-- Doston Hamrakulov created for Artificial Intelligence course using Minimax Algorithm -->
 </html>
